Development Portal (2017-04-05 shi)
==============================
Add missing download_wrap div to csv download links in publisher tables


Development Portal (2017-03-29 shi)
==============================
Add beige alert and translations


Development Portal (2017-03-28 shi)
==============================
Update CSV download links on respective pages
Update Print friendly with new changes
Update title table for donor / sector budgets / transaction pages
Remove total_spend td
Added missing CSV download links for donor / sector activities
Fixed font color for img alts


Development Portal (2017-03-13 shi)
==============================
Update map view to include filters
Update map view styles
Update translations for map view


Development Portal (2017-03-10 shi)
==============================
Fix timeline and visual indicators for dates in results data
Update new css for Print Friendly version
Move target value on the same line as baseline value
Fixed Print Friendly elements with background colour
Fixed border sizes for transaction and budget headers in SAVi
Update headers for main money tables
Update headers for summary stats table view
Fix Print Friendly view for table views
Update footer and amount header text for donor_activities view
Fix padding for sector_activities in Print Friendly
Update activity-website link style in Print Friendly


Development Portal (2017-03-07 shi)
==============================
Added clear all filters option to search


Development Portal (2017-03-06 shi)
==============================
Start on Explore section for revised search inputs
Update new layout for search sections 
Update css when confirmed
Updated typehead for explore section


Development Portal (2017-02-27 shi)
==============================
Fix roles placement for participating-org
Fix blocks for period so they are table-cells
Switch sector icons for search
Renamed sector category to sector group


Development Portal (2017-02-24 shi)
==============================