@@ -72,32 +72,40 @@ recipient-country span				{font-size:48px; color:#000;}
 recipient-country span:nth-of-type(2)	{font-size:20px; color:#000; padding-top:10px;}
 
 
-/*	Start and End dates
+/*	Start and End dates (Planned and Actual)
 	============================================= */
-span.span_activity-date				{display:block; vertical-align:bottom; width:958px; border-top:1px solid #000; border-bottom:1px solid #000;}
-activity-date[type="start-planned"]	{display:none;}
-activity-date[type="end-planned"]	{display:none;}
-activity-date[type="start-actual"]	{font-size:1.0em; display:table-cell; vertical-align:bottom; padding:10px 40px; color:#000; width:480px;}
-activity-date[type="end-actual"]	{font-size:1.0em; display:table-cell; vertical-align:bottom; padding:10px 40px; color:#000; width:480px; text-align:right;}
-activity-date[type="start-actual"]:before	{content:"START DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:bottom; padding-right:10px;}
-activity-date[type="end-actual"]:before		{content:"END DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:bottom; padding-right:10px;}
+span.span_activity-date				{display:block; vertical-align:bottom; width:958px; border-top:1px solid #000; border-bottom:1px solid #000; position:relative; height:81px;}
+activity-date						{box-sizing:border-box;}
+activity-date[type="1"], activity-date[type="3"], activity-date[type="start-planned"],
+activity-date[type="end-planned"]	{font-size:20px; display:block; padding:10px 40px; color:#000; width:480px;}
+activity-date[type="2"], activity-date[type="4"], activity-date[type="start-actual"],
+activity-date[type="end-actual"]	{font-size:20px; display:block; padding:10px 40px; color:#000; width:480px; text-align:right;}
+activity-date[type="1"], activity-date[type="2"], activity-date[type="start-planned"], activity-date[type="start-actual"]	{border-bottom:1px solid #000;}
+activity-date[type="1"]:before, activity-date[type="start-planned"]:before	{content:"PLANNED START DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:baseline; padding-right:10px;}
+activity-date[type="2"]:before, activity-date[type="start-actual"]:before	{content:"ACTUAL START DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:baseline; padding-right:10px;}
+activity-date[type="3"]:before, activity-date[type="end-planned"]:before	{content:"PLANNED END DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:baseline; padding-right:10px;}
+activity-date[type="4"]:before, activity-date[type="end-actual"]:before		{content:"ACTUAL END DATE"; font-size:14px; color:#000; display:inline-block; vertical-align:baseline; padding-right:10px;}
+activity-date[type="1"], activity-date[type="start-planned"]	{position:absolute; top:0; left:0;}
+activity-date[type="2"], activity-date[type="start-actual"]		{position:absolute; top:0; right:0;}
+activity-date[type="3"], activity-date[type="end-planned"]		{position:absolute; bottom:0; left:0;}
+activity-date[type="4"], activity-date[type="end-actual"]		{position:absolute; bottom:0; right:0;}
 
 
 /*	Who's invloved?
 	============================================= */
-span.span_participating-org			{display:block; width:880px; padding:40px 40px 10px 40px; font-size:18px; color:#000; counter-reset:section;}
+span.span_participating-org			{display:block; width:880px; padding:40px; font-size:18px; color:#000; counter-reset:section;}
 span.span_participating-org:before 	{content:"WHO'S INVOLVED?"; font-size:14px; color:#000; display:block; margin-bottom:20px;}
-participating-org::before			{counter-increment:section; content:counter(section) ". ";}
+participating-org::before			{counter-increment:section; content:counter(section) ". "; display:inline-block; vertical-align:top; margin-right:5px;}
 participating-org 					{display:block; list-style-position:inside; list-style-type:decimal; padding:10px 0;}
 participating-org a					{display:initial;}
 participating-org a:link			{color:#000;}
 participating-org a:visited			{color:#000; text-decoration:underline;}
 participating-org a:hover			{color:#000;}
 participating-org a:active			{color:#000;}
-participating-org[role="1"] narrative:after, participating-org[role="funding"] narrative:after		{content:"FUNDING ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
-participating-org[role="2"] narrative:after, participating-org[role="accountable"] narrative:after	{content:"ACCOUNTABLE ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
-participating-org[role="3"] narrative:after, participating-org[role="extending"] narrative:after	{content:"EXTENDING ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
-participating-org[role="4"] narrative:after, participating-org[role="implementing"] narrative:after	{content:"IMPLEMENTING ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="1"]:after, participating-org[role="funding"]:after		{content:"FUNDING ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="2"]:after, participating-org[role="accountable"]:after	{content:"ACCOUNTABLE ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="3"]:after, participating-org[role="extending"]:after	{content:"EXTENDING ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
+participating-org[role="4"]:after, participating-org[role="implementing"]:after	{content:"IMPLEMENTING ROLE"; font-size:14px; color:#000; display:inline-block; padding:0; padding-left:10px;}
 
 span-narrative.participating-role	{font-size:14px; color:#ccc; display:inline-block; padding:0; padding-left:10px; text-transform:uppercase; line-height:initial;}
 
@@ -108,7 +116,7 @@ span.span_participating-org narrative:nth-of-type(n+2)	{display:block; padding:1
 	============================================= */
 reporting-org {display:block; width:880px; padding:20px 40px 40px 40px; font-size:18px; font-weight:bold; color:#000; line-height:1.45em;}
 reporting-org:before {content:"This activity is reported by"; display:inline-block; padding-right:5px; color:#000; font-size:18px; font-weight:normal;}
-reporting-org:nth-of-type(1)	{padding-top:40px;}
+reporting-org:nth-of-type(1)	{padding-top:0px;}
 reporting-org:last-of-type		{padding-bottom:40px;}
 
 
