@@ -1,3 +1,12 @@
+Development Portal (2017-05-08 shi)
+==============================
+Fixed participating-org to not include narrative for headings
+Fixed start and end dates to accommodate v2.02 standard
+Moved reporting-org under project title in SAVi
+Fix Print friendly version with new changes
+Comment out adding actual activity dates in savi.js
+
+
 Development Portal (2017-04-05 shi)
 ==============================
 Add missing download_wrap div to csv download links in publisher tables
